# mindswarm-core

./: README.md  __init__.py  ai_loop.py  ai_service_interaction.py  cli.py  cli_commands.py  cli_commands_batch_mode.py  code_map.md  commands.py  config.py  context_management.py  delegate_manager.py  exceptions.py  execution_engine.py  initial_plan_generator.py  interactive_ai.py  interactive_entry.py  json_validator.py  logging_custom.py  main.py  model_capabilities.py  model_info_provider.py  model_override.py  path_management.py  plan_parser.py  plan_runner.py  processing.py  project_plan_generator.py  prompt_system.py  pyproject.toml  pytest.ini  state_management.py  subtask_generator.py  task_selector.py  utils.py  workspace_detection.py
agent_handlers/: __init__.py  ai_interaction.py  code_generation.py  no_op.py  planning.py  rfc_refinement.py  validation.py
agents/: __init__.py  agent.py  agent_communication.py  agent_e_exceptions.py  agent_e_handler.py  base_handler.py  config.py  context_manager.py  continuation_strategy.py  debbie_tools.py  decomposed_task.py  factory.py  mail_notification.py  mailbox.py  mailbox_tools.py  planner_handler.py  planner_tools.py  prompt_optimizer.py  registry.py  session_manager.py  stateless_agent.py  task_decomposer.py
ai_loop/: __init__.py  ai_config.py  ai_loopy.py  stateless_ai_loop.py  tool_call_accumulator.py
ai_service/: ai_service.py  openrouter_ai_service.py  tool_calling.py
api/: __init__.py  agent_switch_handler.py  agent_switch_handler_backup.py  async_agent_endpoints.py  code_map.md  debbie_observer.py  main.py  mcp_integration.py  message_models.py  stateless_session_manager.py
batch/: __init__.py  __main__.py  batch_client.py  debbie_integration.py  intervention.py  monitoring.py  server_manager.py  websocket_interceptor.py
channels/: integration.py  router.py
commands/: agent.py  args.py  base.py  debbie.py  echo.py  help.py  registry.py  session.py  status.py  (+1 more)
(+345 files in other folders)
